; ModuleID = '/home/carl/AnghaBench/linux/sound/pci/hda/extr_hda_codec.c_get_ctl_amp_tlv.c'
source_filename = "/home/carl/AnghaBench/linux/sound/pci/hda/extr_hda_codec.c_get_ctl_amp_tlv.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snd_kcontrol = type { i32 }
%struct.hda_codec = type { i32 }

@AC_AMPCAP_STEP_SIZE = common dso_local global i32 0, align 4
@AC_AMPCAP_STEP_SIZE_SHIFT = common dso_local global i32 0, align 4
@AC_AMPCAP_OFFSET = common dso_local global i32 0, align 4
@AC_AMPCAP_OFFSET_SHIFT = common dso_local global i32 0, align 4
@AC_AMPCAP_MIN_MUTE = common dso_local global i32 0, align 4
@TLV_DB_SCALE_MUTE = common dso_local global i32 0, align 4
@SNDRV_CTL_TLVT_DB_SCALE = common dso_local global i32 0, align 4
@SNDRV_CTL_TLVO_TYPE = common dso_local global i64 0, align 8
@SNDRV_CTL_TLVO_LEN = common dso_local global i64 0, align 8
@SNDRV_CTL_TLVO_DB_SCALE_MIN = common dso_local global i64 0, align 8
@SNDRV_CTL_TLVO_DB_SCALE_MUTE_AND_STEP = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.snd_kcontrol*, i32*)* @get_ctl_amp_tlv to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @get_ctl_amp_tlv(%struct.snd_kcontrol* %0, i32* %1) #0 {
  %3 = alloca %struct.snd_kcontrol*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca %struct.hda_codec*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  store %struct.snd_kcontrol* %0, %struct.snd_kcontrol** %3, align 8
  store i32* %1, i32** %4, align 8
  %13 = load %struct.snd_kcontrol*, %struct.snd_kcontrol** %3, align 8
  %14 = call %struct.hda_codec* @snd_kcontrol_chip(%struct.snd_kcontrol* %13)
  store %struct.hda_codec* %14, %struct.hda_codec** %5, align 8
  %15 = load %struct.snd_kcontrol*, %struct.snd_kcontrol** %3, align 8
  %16 = call i32 @get_amp_nid(%struct.snd_kcontrol* %15)
  store i32 %16, i32* %6, align 4
  %17 = load %struct.snd_kcontrol*, %struct.snd_kcontrol** %3, align 8
  %18 = call i32 @get_amp_direction(%struct.snd_kcontrol* %17)
  store i32 %18, i32* %7, align 4
  %19 = load %struct.snd_kcontrol*, %struct.snd_kcontrol** %3, align 8
  %20 = call i32 @get_amp_offset(%struct.snd_kcontrol* %19)
  store i32 %20, i32* %8, align 4
  %21 = load %struct.snd_kcontrol*, %struct.snd_kcontrol** %3, align 8
  %22 = call i32 @get_amp_min_mute(%struct.snd_kcontrol* %21)
  store i32 %22, i32* %9, align 4
  %23 = load %struct.hda_codec*, %struct.hda_codec** %5, align 8
  %24 = load i32, i32* %6, align 4
  %25 = load i32, i32* %7, align 4
  %26 = call i32 @query_amp_caps(%struct.hda_codec* %23, i32 %24, i32 %25)
  store i32 %26, i32* %10, align 4
  %27 = load i32, i32* %10, align 4
  %28 = load i32, i32* @AC_AMPCAP_STEP_SIZE, align 4
  %29 = and i32 %27, %28
  %30 = load i32, i32* @AC_AMPCAP_STEP_SIZE_SHIFT, align 4
  %31 = ashr i32 %29, %30
  store i32 %31, i32* %12, align 4
  %32 = load i32, i32* %12, align 4
  %33 = add nsw i32 %32, 1
  %34 = mul nsw i32 %33, 25
  store i32 %34, i32* %12, align 4
  %35 = load i32, i32* %10, align 4
  %36 = load i32, i32* @AC_AMPCAP_OFFSET, align 4
  %37 = and i32 %35, %36
  %38 = load i32, i32* @AC_AMPCAP_OFFSET_SHIFT, align 4
  %39 = ashr i32 %37, %38
  %40 = sub nsw i32 0, %39
  store i32 %40, i32* %11, align 4
  %41 = load i32, i32* %8, align 4
  %42 = load i32, i32* %11, align 4
  %43 = add i32 %42, %41
  store i32 %43, i32* %11, align 4
  %44 = load i32, i32* %11, align 4
  %45 = load i32, i32* %12, align 4
  %46 = mul nsw i32 %44, %45
  store i32 %46, i32* %11, align 4
  %47 = load i32, i32* %9, align 4
  %48 = icmp ne i32 %47, 0
  br i1 %48, label %54, label %49

49:                                               ; preds = %2
  %50 = load i32, i32* %10, align 4
  %51 = load i32, i32* @AC_AMPCAP_MIN_MUTE, align 4
  %52 = and i32 %50, %51
  %53 = icmp ne i32 %52, 0
  br i1 %53, label %54, label %58

54:                                               ; preds = %49, %2
  %55 = load i32, i32* @TLV_DB_SCALE_MUTE, align 4
  %56 = load i32, i32* %12, align 4
  %57 = or i32 %56, %55
  store i32 %57, i32* %12, align 4
  br label %58

58:                                               ; preds = %54, %49
  %59 = load i32, i32* @SNDRV_CTL_TLVT_DB_SCALE, align 4
  %60 = load i32*, i32** %4, align 8
  %61 = load i64, i64* @SNDRV_CTL_TLVO_TYPE, align 8
  %62 = getelementptr inbounds i32, i32* %60, i64 %61
  store i32 %59, i32* %62, align 4
  %63 = load i32*, i32** %4, align 8
  %64 = load i64, i64* @SNDRV_CTL_TLVO_LEN, align 8
  %65 = getelementptr inbounds i32, i32* %63, i64 %64
  store i32 8, i32* %65, align 4
  %66 = load i32, i32* %11, align 4
  %67 = load i32*, i32** %4, align 8
  %68 = load i64, i64* @SNDRV_CTL_TLVO_DB_SCALE_MIN, align 8
  %69 = getelementptr inbounds i32, i32* %67, i64 %68
  store i32 %66, i32* %69, align 4
  %70 = load i32, i32* %12, align 4
  %71 = load i32*, i32** %4, align 8
  %72 = load i64, i64* @SNDRV_CTL_TLVO_DB_SCALE_MUTE_AND_STEP, align 8
  %73 = getelementptr inbounds i32, i32* %71, i64 %72
  store i32 %70, i32* %73, align 4
  ret void
}

declare dso_local %struct.hda_codec* @snd_kcontrol_chip(%struct.snd_kcontrol*) #1

declare dso_local i32 @get_amp_nid(%struct.snd_kcontrol*) #1

declare dso_local i32 @get_amp_direction(%struct.snd_kcontrol*) #1

declare dso_local i32 @get_amp_offset(%struct.snd_kcontrol*) #1

declare dso_local i32 @get_amp_min_mute(%struct.snd_kcontrol*) #1

declare dso_local i32 @query_amp_caps(%struct.hda_codec*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
